# homa-mqtt-addons

./: LICENSE  README.md  repository.yaml
.github/workflows/: builder.yaml  update.yaml
apsystems-ez1-homa/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  config.yaml
apsystems-ez1-homa/translations/: de.yaml  en.yaml
gas-meter-homa/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  config.yaml
gas-meter-homa/translations/: de.yaml  en.yaml
min-max-saver-homa/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  config.yaml
min-max-saver-homa/translations/: de.yaml  en.yaml
openv-homa/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  config.yaml
openv-homa/rootfs/etc/s6-overlay/s6-rc.d/vclient_sub/: finish
openv-homa/translations/: de.yaml  en.yaml
resol-vbus-homa/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  config.yaml
resol-vbus-homa/translations/: de.yaml  en.yaml
sml/: CHANGELOG.md  DOCS.md  Dockerfile  config.yaml
sml-homa/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  config.yaml
sml-homa/rootfs/etc/services.d/sml2mqtt/: run
sml-homa/sml2mqtt/: CMakeLists.txt
sml-homa/sml2mqtt/src/: MqttClient.h  SML.cpp  main.cpp
sml-homa/translations/: de.yaml  en.yaml
sml/rootfs/etc/services.d/sml2mqtt/: finish
sml/sml2mqtt/: README.md
sml/sml2mqtt/src/: CMakeLists.txt  MqttClient.cpp  sml2mqtt.service  sml2mqtt.yaml
vcontrold/: Dockerfile  config.yaml
vcontrold/rootfs/etc/s6-overlay/s6-rc.d/vclient_pub/: finish  run
vcontrold/rootfs/etc/services.d/: mqtt_helper.sh
(+3 files in other folders)
